@@ -1,3 +1,7 @@
+ * H2SerializeHeaders no longer has an effect. A warning is logged when it is
+   set to "on". The switch enabled the internal writing of requests to be parsed
+   by the internal HTTP/1.1 protocol handler and was introduced to avoid
+   potential incompatibilities during the introduction of HTTP/2.
  * Removed the abort/redo of tasks when mood swings lower the active
    limit. This probably hurts the server more than it helps. Some
    setup, like proxied connections, can be slow to respond to the
